Fix login field layout: remove absolute positioning, restore label visibility, align fields right using flexbox

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -55,7 +55,6 @@
     width: 100%;
     max-width: 400px;
     justify-content: center;
-    position: relative;
 }
 
         .form-row-inline label {
@@ -75,10 +74,8 @@
     font-size: 1rem;
     line-height: 1.5;
     vertical-align: middle;
-    margin-left: 0;
+    margin-left: auto;
     box-sizing: border-box;
-    position: absolute;
-    right: 0;
 }
 
 .microsoft-btn { background: #2F2F2F; color: #fff; }
